@@ -2,6 +2,7 @@
   * Added possibility, automatically to change orientation (a portrait or a landscape) for OS2009
   * Added fullscreen button for application mode 
   * Fixed problem with downloading weather forecast
+  * Increased some labels in settings window
   * Various small fixes
 
 0.22.1
